# RustiveDump

./: CHANGELOG.md  Cargo.toml  LICENSE  Linker.ld  Makefile.toml  README.md  readme.md
scripts/: xor_decrypt.py
src/: dump.rs  helper.rs  instance.rs  main.rs  mdfile.rs  premain.rs
src/common/: crtapi.rs  debug.rs  ldrapi.rs  mod.rs  utils.rs  xor.rs
src/debug/: k32.rs  mod.rs
src/dumper/: dump.rs  mdfile.rs  mod.rs
src/encrypt/: mod.rs
src/native/: allocator.rs  gate.rs  memory.rs  mod.rs  ntapi.rs  ntdef.rs  ntfile.rs  ntpsapi.rs
src/ntapi/: allocator.rs  def.rs  file.rs  g_instance.rs  memory.rs  mod.rs  privilege.rs  process.rs  syscall.rs  syscall_gate.rs  utils.rs
src/remote/: mod.rs  winsock.rs
