[package]
name = "RustiveDump"
version = "0.1.1"
edition = "2024"
authors = ["safedv"]

[dependencies]
panic-halt = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[features]
default = []
debug = []
xor = []
remote = []
lsasrv = []
